LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/ACNT_RECP_DT__x.object-meta.xml
<CustomObject>
    <description>ACNT_RECP_DT</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>ACNT_RECP_DT</externalName>
    <label>ACNT_RECP_DT</label>
    <pluralLabel>ACNT_RECP_DT</pluralLabel>
</CustomObject>