LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/ADM_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>ADM_CHARGES__c</fullName>
    <description>ADM_CHARGES</description>
    <externalDeveloperName>ADM_CHARGES</externalDeveloperName>
    <label>ADM_CHARGES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>