LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/ADMCHARGESRATIO__c.field-meta.xml
<CustomField>
    <fullName>ADMCHARGESRATIO__c</fullName>
    <description>ADMCHARGESRATIO</description>
    <externalDeveloperName>ADMCHARGESRATIO</externalDeveloperName>
    <label>ADMCHARGESRATIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>