LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/BANK_CHRGS__c.field-meta.xml
<CustomField>
    <fullName>BANK_CHRGS__c</fullName>
    <description>BANK_CHRGS</description>
    <externalDeveloperName>BANK_CHRGS</externalDeveloperName>
    <label>BANK_CHRGS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>