LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/DOC_NO__c.field-meta.xml
<CustomField>
    <fullName>DOC_NO__c</fullName>
    <description>DOC_NO</description>
    <externalDeveloperName>DOC_NO</externalDeveloperName>
    <label>DOC_NO</label>
    <length>16</length>
    <type>Text</type>
</CustomField>