LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/EDU_CESS__c.field-meta.xml
<CustomField>
    <fullName>EDU_CESS__c</fullName>
    <description>EDU_CESS</description>
    <externalDeveloperName>EDU_CESS</externalDeveloperName>
    <label>EDU_CESS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>