LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/FEE__c.field-meta.xml
<CustomField>
    <fullName>FEE__c</fullName>
    <description>FEE</description>
    <externalDeveloperName>FEE</externalDeveloperName>
    <label>FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>