LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/FEE_RATIO__c.field-meta.xml
<CustomField>
    <fullName>FEE_RATIO__c</fullName>
    <description>FEE_RATIO</description>
    <externalDeveloperName>FEE_RATIO</externalDeveloperName>
    <label>FEE_RATIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>