LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/FOREX_ADM_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>FOREX_ADM_CHARGES__c</fullName>
    <description>FOREX_ADM_CHARGES</description>
    <externalDeveloperName>FOREX_ADM_CHARGES</externalDeveloperName>
    <label>FOREX_ADM_CHARGES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>