LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/FOREX_DIFF__c.field-meta.xml
<CustomField>
    <fullName>FOREX_DIFF__c</fullName>
    <description>FOREX_DIFF</description>
    <externalDeveloperName>FOREX_DIFF</externalDeveloperName>
    <label>FOREX_DIFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>