LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/FOREX_FEE__c.field-meta.xml
<CustomField>
    <fullName>FOREX_FEE__c</fullName>
    <description>FOREX_FEE</description>
    <externalDeveloperName>FOREX_FEE</externalDeveloperName>
    <label>FOREX_FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>