LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/FOREX_OPE__c.field-meta.xml
<CustomField>
    <fullName>FOREX_OPE__c</fullName>
    <description>FOREX_OPE</description>
    <externalDeveloperName>FOREX_OPE</externalDeveloperName>
    <label>FOREX_OPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>