LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/GR_COMP_CODE__c.field-meta.xml
<CustomField>
    <fullName>GR_COMP_CODE__c</fullName>
    <description>GR_COMP_CODE</description>
    <externalDeveloperName>GR_COMP_CODE</externalDeveloperName>
    <label>GR_COMP_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>