LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/INV_REF_JV_NO__c.field-meta.xml
<CustomField>
    <fullName>INV_REF_JV_NO__c</fullName>
    <description>INV_REF_JV_NO</description>
    <externalDeveloperName>INV_REF_JV_NO</externalDeveloperName>
    <label>INV_REF_JV_NO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>