LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/LOC_CODE__c.field-meta.xml
<CustomField>
    <fullName>LOC_CODE__c</fullName>
    <description>LOC_CODE</description>
    <externalDeveloperName>LOC_CODE</externalDeveloperName>
    <label>LOC_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>