LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/MISL_AMT__c.field-meta.xml
<CustomField>
    <fullName>MISL_AMT__c</fullName>
    <description>MISL_AMT</description>
    <externalDeveloperName>MISL_AMT</externalDeveloperName>
    <label>MISL_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>