LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/OPE__c.field-meta.xml
<CustomField>
    <fullName>OPE__c</fullName>
    <description>OPE</description>
    <externalDeveloperName>OPE</externalDeveloperName>
    <label>OPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>