LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/OPE_RATIO__c.field-meta.xml
<CustomField>
    <fullName>OPE_RATIO__c</fullName>
    <description>OPE_RATIO</description>
    <externalDeveloperName>OPE_RATIO</externalDeveloperName>
    <label>OPE_RATIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>