LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/PRE_ACC_YEAR__c.field-meta.xml
<CustomField>
    <fullName>PRE_ACC_YEAR__c</fullName>
    <description>PRE_ACC_YEAR</description>
    <externalDeveloperName>PRE_ACC_YEAR</externalDeveloperName>
    <label>PRE_ACC_YEAR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>