LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/PROJECT_CODE__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_CODE__c</fullName>
    <description>PROJECT_CODE</description>
    <externalDeveloperName>PROJECT_CODE</externalDeveloperName>
    <label>PROJECT_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>