LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/RATIO__c.field-meta.xml
<CustomField>
    <fullName>RATIO__c</fullName>
    <description>RATIO</description>
    <externalDeveloperName>RATIO</externalDeveloperName>
    <label>RATIO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>