LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/RECEIPT_SR_NO__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_SR_NO__c</fullName>
    <description>RECEIPT_SR_NO</description>
    <externalDeveloperName>RECEIPT_SR_NO</externalDeveloperName>
    <label>RECEIPT_SR_NO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>