LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/REMARK__c.field-meta.xml
<CustomField>
    <fullName>REMARK__c</fullName>
    <description>REMARK</description>
    <externalDeveloperName>REMARK</externalDeveloperName>
    <label>REMARK</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>