LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/ROUND_OFF_AMT__c.field-meta.xml
<CustomField>
    <fullName>ROUND_OFF_AMT__c</fullName>
    <description>ROUND_OFF_AMT</description>
    <externalDeveloperName>ROUND_OFF_AMT</externalDeveloperName>
    <label>ROUND_OFF_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>