LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/SERVICE_TAX__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_TAX__c</fullName>
    <description>SERVICE_TAX</description>
    <externalDeveloperName>SERVICE_TAX</externalDeveloperName>
    <label>SERVICE_TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>