LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/SPLIT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>SPLIT_AMOUNT__c</fullName>
    <description>SPLIT_AMOUNT</description>
    <externalDeveloperName>SPLIT_AMOUNT</externalDeveloperName>
    <label>SPLIT_AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>