LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/SUR_TAX__c.field-meta.xml
<CustomField>
    <fullName>SUR_TAX__c</fullName>
    <description>SUR_TAX</description>
    <externalDeveloperName>SUR_TAX</externalDeveloperName>
    <label>SUR_TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>