LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/TDS_AMT__c.field-meta.xml
<CustomField>
    <fullName>TDS_AMT__c</fullName>
    <description>TDS_AMT</description>
    <externalDeveloperName>TDS_AMT</externalDeveloperName>
    <label>TDS_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>