LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/TDS_PER__c.field-meta.xml
<CustomField>
    <fullName>TDS_PER__c</fullName>
    <description>TDS_PER</description>
    <externalDeveloperName>TDS_PER</externalDeveloperName>
    <label>TDS_PER</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>