LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_DT__x/fields/TDS_REMARK__c.field-meta.xml
<CustomField>
    <fullName>TDS_REMARK__c</fullName>
    <description>TDS_REMARK</description>
    <externalDeveloperName>TDS_REMARK</externalDeveloperName>
    <label>TDS_REMARK</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>